[gd_scene load_steps=4 format=3 uid="uid://cfntwohuf5a26"]

[ext_resource type="Script" uid="uid://d0286rmwrd8oy" path="res://Game/Flower/Anomaly.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://it3vyg8dy2nm" path="res://Assets/Sprites/Icons/casting_bgr.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bk1w6v68qe2ys" path="res://Assets/Sprites/Icons/casting_fill_red.png" id="3"]

[node name="Anomaly" type="Node2D"]
script = ExtResource("1")

[node name="TimeBeforeGlitch" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ProgressToGlitch" type="TextureProgressBar" parent="."]
offset_left = -8.968
offset_top = -33.566
offset_right = 26.032
offset_bottom = -30.566
max_value = 2.5
step = 0.01
nine_patch_stretch = true
texture_under = ExtResource("2")
texture_progress = ExtResource("3")

[connection signal="tree_entered" from="." to="." method="OnTreeEntered"]
[connection signal="timeout" from="TimeBeforeGlitch" to="." method="OnTimeBeforeGlitch"]
